# Nota

./: Cargo.toml  readme.md  report.json
src/: args.rs  filter.rs  hash.rs  lib.rs  main.rs  report.rs  utils.rs
test_data/restore_test/quarantine/: file1.txt
tests/: integration_test.rs
