[package]
name = "Nota"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
blake3 = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
tempfile = "3.10"
rayon = "1.10.0"
jwalk = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"